# sprig-net

./: CMakeLists.txt  Makefile  README.md  bool.h  compile.sh  dsf.c  dsf.h  findloop.c  findloop.h  game.c  js_random.c  js_random.h  malloc.c  malloc.h  qsort.c  qsort.h  random.c.bak  real_malloc.c  real_malloc.h  tree234.c
js/: engine.d.ts  index.js  index.ts  package.json  rollup.config.js  scratch.js
pub/: fns.js  main.js  main.min.mjs  main.mjs  main.terser.js  main.terser.mjs  main.wasm  patch.mjs  test.js
